--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "nestjs-pino": "^4.0.0",
+    "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
