--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cookie-parser": "^1.4.6",
     "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "nestjs-pino": "^4.0.0",
