user module setup working

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,19 @@ services:
     volumes:
       - .:/usr/src/app
 
+  auth:
+    build: 
+      context: .
+      dockerfile: ./apps/auth/Dockerfile
+      target: development
+    command: npm run start:dev
+    env_file:
+      - ./apps/auth/.env
+    ports:
+      - 3001:3001
+    volumes:
+      - .:/usr/src/app
+
   mongo:
     image: mongo
     ports:
