--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,26 @@
 services:
-  reservation:
-    build: 
+  reservations:
+    build:
       context: .
       dockerfile: ./apps/reservations/Dockerfile
       target: development
-    command: npm run start:dev
+    command: npm run start:dev reservations
     env_file:
       - ./apps/reservations/.env
     ports:
-      - 3000:3000
+      - '3000:3000'
     volumes:
       - .:/usr/src/app
-
   auth:
-    build: 
+    build:
       context: .
       dockerfile: ./apps/auth/Dockerfile
       target: development
-    command: npm run start:dev
+    command: npm run start:dev auth
     env_file:
       - ./apps/auth/.env
     ports:
-      - 3001:3001
+      - '3001:3001'
     volumes:
       - .:/usr/src/app
 
