config service resolving hmr
Config service Resolve and working on hmr for docker build not working not able to reproduce solution using tsconfig

--- a/apps/reservations/Dockerfile
+++ b/apps/reservations/Dockerfile
@@ -22,7 +22,7 @@ COPY package*.json ./
 
 COPY package-lock.json ./
 
-RUN npm install --only=production
+RUN npm install --only=prod
 
 COPY --from=development /usr/src/app/dist ./dist 
 
