payment integaration in process added stripe

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,7 +23,18 @@ services:
       - '3001:3001'
     volumes:
       - .:/usr/src/app
-
+  payments:
+    build:
+      context: .
+      dockerfile: ./apps/payments/Dockerfile
+      target: development
+    command: npm run start:dev payments
+    env_file:
+      - ./apps/payments/.env
+    ports:
+      - '3002:3002'
+    volumes:
+      - .:/usr/src/app
   mongo:
     image: mongo
     ports:
