--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "passport-local": "^1.0.0",
     "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^14.20.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
