notification microservice setup
notification microservice setup with docker

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,16 @@ services:
       - ./apps/payments/.env
     volumes:
       - .:/usr/src/app
+  notifications:
+    build:
+      context: .
+      dockerfile: ./apps/notifications/Dockerfile
+      target: development
+    command: npm run start:dev notifications
+    env_file:
+      - ./apps/notifications/.env
+    volumes:
+      - .:/usr/src/app
   mongo:
     image: mongo
     ports:
