--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@types/cookie-parser": "^1.4.7",
+    "@types/nodemailer": "^6.4.14",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -37,6 +38,7 @@
     "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "nestjs-pino": "^4.0.0",
+    "nodemailer": "^6.9.12",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
