--- a/apps/reservations/Dockerfile
+++ b/apps/reservations/Dockerfile
@@ -1,15 +1,19 @@
-FROM node:alpine as development
+FROM node:alpine As development
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./ 
-
+COPY package.json ./
 COPY package-lock.json ./
+COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
+
 
 RUN npm install
 
-COPY . .
+COPY apps/reservations apps/reservations
+COPY libs libs
 
+RUN npm run build reservations
 
 FROM node:alpine as production
 
@@ -18,13 +22,12 @@ ENV NODE_ENV=${NODE_ENV}
 
 WORKDIR /usr/src/app
 
-COPY package*.json ./
-
+COPY package.json ./
 COPY package-lock.json ./
+
 
 RUN npm install --only=prod
 
-COPY --from=development /usr/src/app/dist ./dist 
+COPY --from=development /usr/src/app/dist ./dist
 
 CMD ["node", "dist/apps/reservations/main"]
-
