--- a/package.json
+++ b/package.json
@@ -20,44 +20,30 @@
     "test:e2e": "jest --config ./apps/booking/test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "^10.3.3",
     "@nestjs/mongoose": "^10.0.4",
-    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
-    "@types/cookie-parser": "^1.4.7",
-    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "joi": "^17.12.2",
     "mongoose": "^8.2.1",
     "nestjs-pino": "^4.0.0",
-    "nodemailer": "^6.9.12",
-    "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
     "pino-pretty": "^10.3.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "stripe": "^14.20.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/nodemailer": "^6.4.14",
-    "@types/passport-jwt": "^4.0.1",
-    "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -72,7 +58,8 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/cookie-parser": "^1.4.7"
   },
   "jest": {
     "moduleFileExtensions": [
