fixed auth docker build error of conflict in dep

--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -27,7 +27,7 @@ WORKDIR /usr/src/app
 COPY package.json ./
 COPY package-lock.json ./
 
-RUN npm install --prod
+RUN npm install --omit=dev
 
 COPY --from=development /usr/src/app/dist ./dist
 
