--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.2.1",
     "nestjs-pino": "^4.0.0",
     "pino-pretty": "^10.3.1",
+    "recursive-install": "^1.4.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -41,6 +42,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
@@ -58,8 +60,7 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "@types/cookie-parser": "^1.4.7"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
