--- a/package.json
+++ b/package.json
@@ -36,7 +36,15 @@
     "pino-pretty": "^10.3.1",
     "recursive-install": "^1.4.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
+    "bcryptjs": "^2.4.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "nodemailer": "^6.9.1",
+    "@nestjs-modules/mailer": "^1.11.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -60,7 +68,11 @@
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
+    "@types/nodemailer": "^6.4.7"
   },
   "jest": {
     "moduleFileExtensions": [
